Creat folosind Colaboratory

--- a/base_NeuralNetwork.ipynb
+++ b/base_NeuralNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAWkSNBFZYiVC9+/36XF9E",
+      "authorship_tag": "ABX9TyMM8mvHP+q1vq+3CWhNdAm4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "zy4dj7CT-xEj"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a Model class that inherits nn.Module\n",
+        "class Model(nn.Module):\n",
+        "  #Input layer(4 features of the flower) -->\n",
+        "  #Hidden layer 1(number of neurons) --> H2(n) -->\n",
+        "  #output(3classes of iris flowers)\n",
+        "  def __init__(self, in_features=4, h1=8, h2=9, out_features=3):\n",
+        "    super().__init__() # instantiate our nn.Module\n",
+        "    self.fc1 = nn.Linear(in_features, h1)\n",
+        "    self.fc2 = nn.Linear(h1, h2)\n",
+        "    self.out = nn.Linear(h2, out_features)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    x = F.relu(self.fc1(x))\n",
+        "    x = F.relu(self.fc2(x))\n",
+        "    x = self.out(x)\n",
+        "\n",
+        "    return x\n"
+      ],
+      "metadata": {
+        "id": "eovM5ruDBg3x"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Pick a manual seed for randomization\n",
+        "torch.manual_seed(41)\n",
+        "#Create an instance of a model\n",
+        "model = Model()"
+      ],
+      "metadata": {
+        "id": "4jftY4wZFYtL"
+      },
+      "execution_count": 10,
+      "outputs": []
     }
   ]
 }
