Creat folosind Colaboratory

--- a/ConvolutionalNN.ipynb
+++ b/ConvolutionalNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4bo1q9HS+nI0UB1VTqOKs",
+      "authorship_tag": "ABX9TyMDYektTipWv7dPt5NQdagi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -251,9 +251,239 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# create a small batch size for images, 10\n",
+        "train_loader = DataLoader(train_data, batch_size=10, shuffle=True)\n",
+        "test_loader = DataLoader(test_data, batch_size=10, shuffle=False)"
+      ],
       "metadata": {
         "id": "UH8hLjGfDxzh"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define our CNN model\n",
+        "# Describe convolutional layer and what it is doing (2 convolutional layer)\n",
+        "conv1 = nn.Conv2d(1, 6, 3, 1)\n",
+        "conv2 = nn.Conv2d(6, 16, 3, 1)"
+      ],
+      "metadata": {
+        "id": "tKFogDBAIIGb"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# grab 1 MNIST record\n",
+        "for i, (X_Train, y_train) in enumerate(train_data):\n",
+        "  break"
+      ],
+      "metadata": {
+        "id": "1J3PYe2CJIqT"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_Train.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XoPYF5XJJd80",
+        "outputId": "e12d889b-77c8-4952-a895-3bf1dfd814ca"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 28, 28])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = X_Train.view(1,1,28,28)"
+      ],
+      "metadata": {
+        "id": "G6QCAYAOJf6h"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# perform our first convolution\n",
+        "x = F.relu(conv1(x)) # rectified linear unit for our activation function"
+      ],
+      "metadata": {
+        "id": "KbrZ4SUqJ84Z"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1 single image, 6 = filters, 26x26 the size of image\n",
+        "x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7Igw8xtsKZQe",
+        "outputId": "9736b3bd-b68b-4031-e357-4d3535c268e2"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 6, 26, 26])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# pass thru the poolig layer\n",
+        "x = F.max_pool2d(x,2,2) # kernel of 2 and stride of 2"
+      ],
+      "metadata": {
+        "id": "h16CRNnLKaYB"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WZ5MqHm7LuhV",
+        "outputId": "f95daef4-1de0-4a36-a63c-0249b880994a"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 6, 13, 13])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Do our second convolutionallayer\n",
+        "x = F.relu(conv2(x))"
+      ],
+      "metadata": {
+        "id": "Q2qfNQUkLyJT"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape # we didn't set padding so we loose 2 pixles"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YNgbeDoINM9o",
+        "outputId": "eb3c6f3e-0080-40f3-bac2-667fad2064b9"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 16, 11, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# pooling layer\n",
+        "x =F.max_pool2d(x, 2, 2)"
+      ],
+      "metadata": {
+        "id": "kde4u6s0NO0D"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape # 11/2 = 5.5 we have to round down because we loose data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CQZNnxwMNl_M",
+        "outputId": "e5db8bee-fcea-449a-f152-ce7e36b3dbb4"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 16, 5, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JE8UNjUoNoxD"
       },
       "execution_count": null,
       "outputs": []
