--- a/ConvolutionalNN.ipynb
+++ b/ConvolutionalNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDYektTipWv7dPt5NQdagi",
+      "authorship_tag": "ABX9TyMU99/ccVlSL53NSU/k2dbc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -481,11 +481,86 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Model class\n",
+        "class ConvolutionalNetwork(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.conv1 = nn.Conv2d(1,6,3,1)\n",
+        "    self.conv2 = nn.Conv2d(6,16,3,1)\n",
+        "    # Fully connected layer\n",
+        "    self.fc1 = nn.Linear(5*5*16, 120)\n",
+        "    self.fc2 = nn.Linear(120, 84)\n",
+        "    self.fc3 = nn.Linear(84, 10)\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    X = F.relu(conv1(X))\n",
+        "    X = F.max_pool2d(X,2,2) # 2x2 kernel and stride 2\n",
+        "    #Second pass\n",
+        "    X = F.relu(conv2(X))\n",
+        "    X = F.max_pool2d(X,2,2)\n",
+        "\n",
+        "    # Re-view to flatten it out\n",
+        "    X = X.view(-1, 16*5*5) # negative one so that we can vary the batch size\n",
+        "\n",
+        "    # Fully connected layers\n",
+        "    X = F.relu(self.fc1(X))\n",
+        "    X = F.relu(self.fc2(X))\n",
+        "    X = self.fc3(x)\n",
+        "    return F.log_softmax(X, dim=1)"
+      ],
       "metadata": {
         "id": "JE8UNjUoNoxD"
       },
-      "execution_count": null,
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create an instance of our model\n",
+        "torch.manual_seed(41)\n",
+        "model = ConvolutionalNetwork()\n",
+        "model"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "25oZEVhkVGRI",
+        "outputId": "bc570fcf-eaea-43db-9592-660fc16788d9"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ConvolutionalNetwork(\n",
+              "  (conv1): Conv2d(1, 6, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (conv2): Conv2d(6, 16, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (fc1): Linear(in_features=400, out_features=120, bias=True)\n",
+              "  (fc2): Linear(in_features=120, out_features=84, bias=True)\n",
+              "  (fc3): Linear(in_features=84, out_features=10, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Loss function optimizer\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=0.001) # smaller the lernig rate the longher its gonna to train\n"
+      ],
+      "metadata": {
+        "id": "3Dy0e9OWVXyb"
+      },
+      "execution_count": 36,
       "outputs": []
     }
   ]
