Train and test CNN

--- a/ConvolutionalNN.ipynb
+++ b/ConvolutionalNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMU99/ccVlSL53NSU/k2dbc",
+      "authorship_tag": "ABX9TyO9UPLOSxh9Q/HXbWY99EK5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 37,
       "metadata": {
         "id": "oyVm2TJf-8Qu"
       },
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "OIS22l4hBRVw"
       },
-      "execution_count": 2,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -68,112 +68,10 @@
         "train_data = datasets.MNIST(root='/cnn_data', train=True, download=True, transform=transform)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rM_t0q1DB8K5",
-        "outputId": "4a35f228-f7ae-4cce-9e45-146cd16a7177"
+        "id": "rM_t0q1DB8K5"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-            "Failed to download (trying next):\n",
-            "HTTP Error 404: Not Found\n",
-            "\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz to /cnn_data/MNIST/raw/train-images-idx3-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 9.91M/9.91M [00:01<00:00, 5.76MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting /cnn_data/MNIST/raw/train-images-idx3-ubyte.gz to /cnn_data/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-            "Failed to download (trying next):\n",
-            "HTTP Error 404: Not Found\n",
-            "\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz to /cnn_data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 153kB/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting /cnn_data/MNIST/raw/train-labels-idx1-ubyte.gz to /cnn_data/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-            "Failed to download (trying next):\n",
-            "HTTP Error 404: Not Found\n",
-            "\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz to /cnn_data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 1.65M/1.65M [00:01<00:00, 1.24MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting /cnn_data/MNIST/raw/t10k-images-idx3-ubyte.gz to /cnn_data/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-            "Failed to download (trying next):\n",
-            "HTTP Error 404: Not Found\n",
-            "\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz to /cnn_data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 4.53MB/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting /cnn_data/MNIST/raw/t10k-labels-idx1-ubyte.gz to /cnn_data/MNIST/raw\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 39,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -184,7 +82,7 @@
       "metadata": {
         "id": "uEmbxGtOCuW0"
       },
-      "execution_count": 4,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -197,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Zi91KxAC6Xb",
-        "outputId": "059b727d-3e93-42ed-9eeb-0e37169374eb"
+        "outputId": "8343425b-be4e-4c15-ef19-d9fd606a061f"
       },
-      "execution_count": 5,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,7 +112,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 41
         }
       ]
     },
@@ -228,9 +126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sQ5bHFwLC-OP",
-        "outputId": "76faac83-41d3-4f34-cf16-9c6ea4c1560e"
+        "outputId": "e6c37a3c-f34e-408f-cc9f-2b457a7cfe38"
       },
-      "execution_count": 6,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +143,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 42
         }
       ]
     },
@@ -259,7 +157,7 @@
       "metadata": {
         "id": "UH8hLjGfDxzh"
       },
-      "execution_count": 17,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -273,7 +171,7 @@
       "metadata": {
         "id": "tKFogDBAIIGb"
       },
-      "execution_count": 18,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -286,7 +184,7 @@
       "metadata": {
         "id": "1J3PYe2CJIqT"
       },
-      "execution_count": 19,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -299,9 +197,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XoPYF5XJJd80",
-        "outputId": "e12d889b-77c8-4952-a895-3bf1dfd814ca"
+        "outputId": "d618cbcb-9727-4475-9ca0-a2c24b435afa"
       },
-      "execution_count": 21,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +209,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 46
         }
       ]
     },
@@ -323,7 +221,7 @@
       "metadata": {
         "id": "G6QCAYAOJf6h"
       },
-      "execution_count": 22,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -335,7 +233,7 @@
       "metadata": {
         "id": "KbrZ4SUqJ84Z"
       },
-      "execution_count": 23,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -349,9 +247,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Igw8xtsKZQe",
-        "outputId": "9736b3bd-b68b-4031-e357-4d3535c268e2"
+        "outputId": "b67770a5-1eff-47ab-a28c-6f5ede6b77ab"
       },
-      "execution_count": 25,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,7 +259,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 49
         }
       ]
     },
@@ -374,7 +272,7 @@
       "metadata": {
         "id": "h16CRNnLKaYB"
       },
-      "execution_count": 26,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -387,9 +285,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WZ5MqHm7LuhV",
-        "outputId": "f95daef4-1de0-4a36-a63c-0249b880994a"
+        "outputId": "bbc22ebe-a10c-4e54-c173-04decf1cc626"
       },
-      "execution_count": 27,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +297,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 51
         }
       ]
     },
@@ -412,7 +310,7 @@
       "metadata": {
         "id": "Q2qfNQUkLyJT"
       },
-      "execution_count": 28,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -425,9 +323,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YNgbeDoINM9o",
-        "outputId": "eb3c6f3e-0080-40f3-bac2-667fad2064b9"
+        "outputId": "2b276ead-8ace-4425-b74b-fdcd2eaa7c73"
       },
-      "execution_count": 30,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,7 +335,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 53
         }
       ]
     },
@@ -450,7 +348,7 @@
       "metadata": {
         "id": "kde4u6s0NO0D"
       },
-      "execution_count": 31,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -463,9 +361,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CQZNnxwMNl_M",
-        "outputId": "e5db8bee-fcea-449a-f152-ce7e36b3dbb4"
+        "outputId": "3bafe06e-e1fb-4629-bb9e-029a4a0ba289"
       },
-      "execution_count": 33,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -475,7 +373,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 55
         }
       ]
     },
@@ -494,10 +392,10 @@
         "    self.fc3 = nn.Linear(84, 10)\n",
         "\n",
         "  def forward(self, X):\n",
-        "    X = F.relu(conv1(X))\n",
+        "    X = F.relu(self.conv1(X))\n",
         "    X = F.max_pool2d(X,2,2) # 2x2 kernel and stride 2\n",
         "    #Second pass\n",
-        "    X = F.relu(conv2(X))\n",
+        "    X = F.relu(self.conv2(X))\n",
         "    X = F.max_pool2d(X,2,2)\n",
         "\n",
         "    # Re-view to flatten it out\n",
@@ -506,13 +404,13 @@
         "    # Fully connected layers\n",
         "    X = F.relu(self.fc1(X))\n",
         "    X = F.relu(self.fc2(X))\n",
-        "    X = self.fc3(x)\n",
+        "    X = self.fc3(X)\n",
         "    return F.log_softmax(X, dim=1)"
       ],
       "metadata": {
         "id": "JE8UNjUoNoxD"
       },
-      "execution_count": 34,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -528,9 +426,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "25oZEVhkVGRI",
-        "outputId": "bc570fcf-eaea-43db-9592-660fc16788d9"
+        "outputId": "b0200507-5a83-4838-f2cc-18bd1d05d7be"
       },
-      "execution_count": 35,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -546,7 +444,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 78
         }
       ]
     },
@@ -560,8 +458,133 @@
       "metadata": {
         "id": "3Dy0e9OWVXyb"
       },
-      "execution_count": 36,
+      "execution_count": 79,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# model train\n",
+        "import time\n",
+        "start_time = time.time()\n",
+        "\n",
+        "# Create variables to tracks things\n",
+        "epochs = 5\n",
+        "train_losses = []\n",
+        "test_losses = []\n",
+        "train_correct = []\n",
+        "test_correct = []\n",
+        "\n",
+        "# Create a for loop of Epochs\n",
+        "for i in range(epochs):\n",
+        "  trn_corr = 0\n",
+        "  tst_corr = 0\n",
+        "\n",
+        "  # Train\n",
+        "  for b,(X_train, y_train) in enumerate(train_loader):\n",
+        "    b += 1 # start our batches at 1\n",
+        "    y_pred = model(X_train) # get predicted vlues from the traning set: is 2d\n",
+        "    loss = criterion(y_pred, y_train) # how off are we?\n",
+        "\n",
+        "    predicted = torch.max(y_pred.data, 1)[1] # add up the number of correct predictions. Indexed off the first point\n",
+        "    batch_corr = (predicted == y_train).sum() # hoe manywe got correct from this batch.\n",
+        "    trn_corr += batch_corr # keep track as we go along in training\n",
+        "\n",
+        "    #Update our parameters\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    #Print our parameters\n",
+        "    if b%600 == 0:\n",
+        "      print(f'Epoch: {i} Batch: {b} Loss: {loss.item()}')\n",
+        "\n",
+        "  train_losses.append(loss)\n",
+        "  train_correct.append(trn_corr)\n",
+        "\n",
+        "  # Test\n",
+        "  with torch.no_grad(): # no gradient so we do not update our wights and bases with test\n",
+        "    for b,(X_test, y_test) in enumerate(test_loader):\n",
+        "      y_val = model(X_test)\n",
+        "      predicted = torch.max(y_val.data, 1)[1] # Adding up correct predictions\n",
+        "      tst_corr += (predicted == y_test).sum()\n",
+        "\n",
+        "  loss = criterion(y_val, y_test)\n",
+        "  test_losses.append(loss)\n",
+        "  test_correct.append(tst_corr)\n",
+        "\n",
+        "\n",
+        "current_time = time.time()\n",
+        "total = current_time-start_time\n",
+        "print(f'Training took: {total/60} minutes!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_zSqKbijiJ9O",
+        "outputId": "24c9587d-b2ee-432c-c1f5-b63877f82ad3"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 0 Batch: 600 Loss: 0.1623610556125641\n",
+            "Epoch: 0 Batch: 1200 Loss: 0.1502392590045929\n",
+            "Epoch: 0 Batch: 1800 Loss: 0.4744560718536377\n",
+            "Epoch: 0 Batch: 2400 Loss: 0.14238706231117249\n",
+            "Epoch: 0 Batch: 3000 Loss: 0.007758188061416149\n",
+            "Epoch: 0 Batch: 3600 Loss: 0.3836284875869751\n",
+            "Epoch: 0 Batch: 4200 Loss: 0.0038223876617848873\n",
+            "Epoch: 0 Batch: 4800 Loss: 0.0021286322735249996\n",
+            "Epoch: 0 Batch: 5400 Loss: 0.0569545142352581\n",
+            "Epoch: 0 Batch: 6000 Loss: 0.00038789428072050214\n",
+            "Epoch: 1 Batch: 600 Loss: 0.005851339548826218\n",
+            "Epoch: 1 Batch: 1200 Loss: 0.3855525553226471\n",
+            "Epoch: 1 Batch: 1800 Loss: 0.004819948226213455\n",
+            "Epoch: 1 Batch: 2400 Loss: 0.003216963727027178\n",
+            "Epoch: 1 Batch: 3000 Loss: 0.0332382395863533\n",
+            "Epoch: 1 Batch: 3600 Loss: 0.5372857451438904\n",
+            "Epoch: 1 Batch: 4200 Loss: 0.04561494290828705\n",
+            "Epoch: 1 Batch: 4800 Loss: 0.0007510822033509612\n",
+            "Epoch: 1 Batch: 5400 Loss: 0.0001173773780465126\n",
+            "Epoch: 1 Batch: 6000 Loss: 0.14201366901397705\n",
+            "Epoch: 2 Batch: 600 Loss: 0.023733172565698624\n",
+            "Epoch: 2 Batch: 1200 Loss: 0.003455493599176407\n",
+            "Epoch: 2 Batch: 1800 Loss: 0.0008372392621822655\n",
+            "Epoch: 2 Batch: 2400 Loss: 0.010705141350626945\n",
+            "Epoch: 2 Batch: 3000 Loss: 0.008078320883214474\n",
+            "Epoch: 2 Batch: 3600 Loss: 0.0011862406972795725\n",
+            "Epoch: 2 Batch: 4200 Loss: 0.038080841302871704\n",
+            "Epoch: 2 Batch: 4800 Loss: 0.0016068397089838982\n",
+            "Epoch: 2 Batch: 5400 Loss: 0.138673797249794\n",
+            "Epoch: 2 Batch: 6000 Loss: 0.2449204921722412\n",
+            "Epoch: 3 Batch: 600 Loss: 0.007151054684072733\n",
+            "Epoch: 3 Batch: 1200 Loss: 0.011097034439444542\n",
+            "Epoch: 3 Batch: 1800 Loss: 0.0017998721450567245\n",
+            "Epoch: 3 Batch: 2400 Loss: 0.0001049584461725317\n",
+            "Epoch: 3 Batch: 3000 Loss: 0.0031431831885129213\n",
+            "Epoch: 3 Batch: 3600 Loss: 0.003668801160529256\n",
+            "Epoch: 3 Batch: 4200 Loss: 0.0037249946035444736\n",
+            "Epoch: 3 Batch: 4800 Loss: 0.00015864608576521277\n",
+            "Epoch: 3 Batch: 5400 Loss: 0.0796482041478157\n",
+            "Epoch: 3 Batch: 6000 Loss: 0.0808732658624649\n",
+            "Epoch: 4 Batch: 600 Loss: 0.014099588617682457\n",
+            "Epoch: 4 Batch: 1200 Loss: 0.0382874570786953\n",
+            "Epoch: 4 Batch: 1800 Loss: 0.16302265226840973\n",
+            "Epoch: 4 Batch: 2400 Loss: 0.02186887338757515\n",
+            "Epoch: 4 Batch: 3000 Loss: 0.0024396399967372417\n",
+            "Epoch: 4 Batch: 3600 Loss: 0.0013979513896629214\n",
+            "Epoch: 4 Batch: 4200 Loss: 0.000989563181065023\n",
+            "Epoch: 4 Batch: 4800 Loss: 0.010317974723875523\n",
+            "Epoch: 4 Batch: 5400 Loss: 0.16506639122962952\n",
+            "Epoch: 4 Batch: 6000 Loss: 0.0027098222635686398\n",
+            "Training took: 3.768334698677063 minutes!\n"
+          ]
+        }
+      ]
     }
   ]
 }
